other/spread-pods-across-topology/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: spread-pods
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
